; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/fuse/extr_dev.c_unlock_request.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/fuse/extr_dev.c_unlock_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fuse_conn = type { i32 }
%struct.fuse_req = type { i32, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fuse_conn*, %struct.fuse_req*)* @unlock_request to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unlock_request(%struct.fuse_conn* %0, %struct.fuse_req* %1) #0 {
  %3 = alloca %struct.fuse_conn*, align 8
  %4 = alloca %struct.fuse_req*, align 8
  store %struct.fuse_conn* %0, %struct.fuse_conn** %3, align 8
  store %struct.fuse_req* %1, %struct.fuse_req** %4, align 8
  %5 = load %struct.fuse_req*, %struct.fuse_req** %4, align 8
  %6 = icmp ne %struct.fuse_req* %5, null
  br i1 %6, label %7, label %25

7:                                                ; preds = %2
  %8 = load %struct.fuse_conn*, %struct.fuse_conn** %3, align 8
  %9 = getelementptr inbounds %struct.fuse_conn, %struct.fuse_conn* %8, i32 0, i32 0
  %10 = call i32 @spin_lock(i32* %9)
  %11 = load %struct.fuse_req*, %struct.fuse_req** %4, align 8
  %12 = getelementptr inbounds %struct.fuse_req, %struct.fuse_req* %11, i32 0, i32 2
  store i64 0, i64* %12, align 8
  %13 = load %struct.fuse_req*, %struct.fuse_req** %4, align 8
  %14 = getelementptr inbounds %struct.fuse_req, %struct.fuse_req* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %7
  %18 = load %struct.fuse_req*, %struct.fuse_req** %4, align 8
  %19 = getelementptr inbounds %struct.fuse_req, %struct.fuse_req* %18, i32 0, i32 0
  %20 = call i32 @wake_up(i32* %19)
  br label %21

21:                                               ; preds = %17, %7
  %22 = load %struct.fuse_conn*, %struct.fuse_conn** %3, align 8
  %23 = getelementptr inbounds %struct.fuse_conn, %struct.fuse_conn* %22, i32 0, i32 0
  %24 = call i32 @spin_unlock(i32* %23)
  br label %25

25:                                               ; preds = %21, %2
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @wake_up(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
